v1.0.1
======================
- Changes file watcher to be more flexible by polling recursivly instead of
individually on each folder
- Added chocolatey installation option
- Fixed relative filepath saving in the directory config
- Fixed an issue with updating to a invalid version
- A small fix for a typo in the theme template
- Disabled cgo and updated to Go 1.12 for better certificate handling

v1.0.0 (Jan 8, 2019)
======================
- Changed how the New command works. Now will create files locally and upload them.
- Fixed a problem with uploading compiled assets
- Decoupled config file from command execution so any command can run without a config file.
- Added environment variable interpolation into config files.
- Added a global environment variable file so that variables can be easily managed
- Changed the file watcher backend to use a polling strategy. This will work
more consistently across all platforms without worries of changes in what
events each operating systems send.
- Fixes multiple unrequired file events
- Added an error when developers are deploying themes with files that will
conflict with Shopify's liquid compilation. example: app.js and app.js.liquid

v0.8.1 (Sept 18, 2018)
======================
- Added checksums to the download links
- Added checksum validation for auto install scripts
- Added support for freebsd
- Fixed deploy for windows paths
- Fixed overwriting compiled assets
- Fixed error output
- Fixed no-ignore flag on download

v0.8.0 (Aug 20, 2018)
=====================
Minor number change because the asset manifest was removed and added a get
command as well as renamed bootstrap to new
- new command
- get command
- Remove assets manifest
- Minimized memory footprint for upload and replace
- handling upload/replace wildcards more gracefully
- better errors for connection issues
- better errors for auth issues
- better errors for timeouts
- warning while working on live themes