@@ -1,5 +1,6 @@
 v1.0.1
 ======================
+- Added support for Sections-Everywhere
 - Changes file watcher to be more flexible by polling recursivly instead of
 individually on each folder
 - Added chocolatey installation option
